--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^7.2.4",
     "reactotron": "^0.9.0",
     "styled-components": "^5.3.0",
+    "styled-media-query": "^2.1.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
